objects/Campaign_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Campaign code setup using for Target List reward calculation</description>
    <fields>
        <fullName>NewBooking_Code__c</fullName>
        <label>NewBooking Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_Period__c</fullName>
        <description>Register Period status campaign</description>
        <label>Register Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThankYou_Code__c</fullName>
        <label>ThankYou Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Campaign Setting</label>
</CustomObject>